kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goplarg
spec:
  ingressClassName: traefik
  rules:
    - host: goplarg.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goplarg
                port:
                  number: 80
